[tool.poetry]
name = "ImageTwinTracker"
version = "0.1.2"
description = "Duplicate image locator that finds images that have been resized"
authors = ["Vaedrenn <vaedrenn@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "ImageTwinTracker", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.25.2"
pillow = "10.0.0"
pyqt5 = "5.15.9"
pyqt5-sip = "12.12.2"
send2trash = "1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pytest-cov = ">=2.0"
mypy = ">=0.910"
flake8 = ">=3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"