[metadata]
name = Image Twin Tracker
description = Duplicate image locator that finds images that have been resized
author = Brian To
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    Application
    find_dupes
install_requires =
    numpy==1.25.2
    opencv_python==4.8.0.74
    PyQt5==5.15.9
    PyQt5_sip==12.12.2
    pytest==7.4.0
    Send2Trash==1.8.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[flake8]
max-line-length = 160